Reorganized the settings into tabs instead of sections
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43642

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PricingSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PricingSettingsTemplate.html
@@ -1,4 +1,4 @@
-﻿<vr-row>
+﻿<vr-row ng-if="ctrl.showDefaultRate || ctrl.isMaxSaleRateRequired">
     <vr-columns width="1/2row">
         <vr-label ng-if="ctrl.showDefaultRate">Default Rate ({{ctrl.systemCurrencySymbol}})</vr-label>
         <vr-textbox value="ctrl.defaultRate" type="number" minvalue="0"
