--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/PricingTemplate/Templates/PricingTemplateRuleManagementTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/PricingTemplate/Templates/PricingTemplateRuleManagementTemplate.html
@@ -1,16 +1,16 @@
 ﻿<vr-button type="Add" data-onclick="scopeModel.onAddPricingTemplateRule" standalone></vr-button>
 
-<vr-datagrid on-ready="scopeModel.onGridReady"
-             datasource="scopeModel.pricingTemplateRules"
-             ondeleterow="scopeModel.onDeletePricingTemplateRule"
-             menuactions="scopeModel.menuActions"
-             enabledraggablerow="true"
-             hidegridmenu>
+<vr-validator validate="scopeModel.validate()">
+    <vr-datagrid on-ready="scopeModel.onGridReady"
+                 datasource="scopeModel.pricingTemplateRules"
+                 ondeleterow="scopeModel.onDeletePricingTemplateRule"
+                 menuactions="scopeModel.menuActions"
+                 hidegridmenu>
 
-    <vr-datagridcolumn field="'Entity.CountriesAsString'" headertext="'Countries'" type="'Text'" widthfactor="1" disablesorting></vr-datagridcolumn>
-    <vr-datagridcolumn field="'Entity.SaleZonesAsString'" headertext="'Sale Zones'" type="'Text'" widthfactor="1" disablesorting></vr-datagridcolumn>
-    <!--<vr-datagridcolumn field="'Entity.IsAvailableInRoot'" headertext="'Available In Root'" type="'Text'" widthfactor="1" disablesorting></vr-datagridcolumn>
-    <vr-datagridcolumn field="'Entity.IsAvailableInSubAccounts'" headertext="'Available In SubAccounts'" type="'Text'" widthfactor="1" disablesorting></vr-datagridcolumn>-->
-</vr-datagrid>
-
+        <vr-datagridcolumn field="'Entity.CountriesAsString'" headertext="'Countries'" type="'Text'" widthfactor="1" disablesorting></vr-datagridcolumn>
+        <vr-datagridcolumn field="'Entity.ZonesAsString'" headertext="'Sale Zones'" type="'Text'" widthfactor="1" disablesorting></vr-datagridcolumn>
+        <!--<vr-datagridcolumn field="'Entity.IsAvailableInRoot'" headertext="'Available In Root'" type="'Text'" widthfactor="1" disablesorting></vr-datagridcolumn>
+        <vr-datagridcolumn field="'Entity.IsAvailableInSubAccounts'" headertext="'Available In SubAccounts'" type="'Text'" widthfactor="1" disablesorting></vr-datagridcolumn>-->
+    </vr-datagrid>
+</vr-validator>
 
