--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/PricingTemplate/PricingTemplateEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/PricingTemplate/PricingTemplateEditor.html
@@ -1,16 +1,18 @@
-﻿<div vr-modalcontent ng-controller="WhS_Sales_PricingTemplateEditorController" width="'60%'" vr-loader="scopeModel.isLoading">
+﻿<div vr-modalcontent ng-controller="WhS_Sales_PricingTemplateEditorController" width="'70%'" vr-loader="scopeModel.isLoading">
     <vr-modalbody>
         <vr-form name="formPricingTemplateEditor">
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
-                        <vr-columns width="1/3row">
+                        <vr-columns width="1/4row">
                             <vr-textbox label="Name" value="scopeModel.name" isrequired></vr-textbox>
                         </vr-columns>
-                        <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" isrequired="true" normal-col-num="4"></vr-common-currency-selector>
+                        <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" isrequired="true" normal-col-num="3"></vr-common-currency-selector>
                         <vr-whs-be-sellingnumberplan-selector on-ready="scopeModel.onSellingNumberPlanSelectorReady"
-                                                              onselectionchanged="scopeModel.onSellingNumberPlanSelectorChanged"
-                                                              selectedvalues="scopeModel.selectedSellingNumberPlan" normal-col-num="4" isrequired="true">
+                                                              onbeforeselectionchanged="scopeModel.onBeforeSellingNumberPlanSelectionChanged"
+                                                              onselectionchanged="scopeModel.onSellingNumberPlanSelectionChanged"
+                                                              selectedvalues="scopeModel.selectedSellingNumberPlan"
+                                                              normal-col-num="3" isrequired="true" hideremoveicon="true">
                         </vr-whs-be-sellingnumberplan-selector>
                     </vr-row>
                     <vr-row>
@@ -20,11 +22,11 @@
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Rules'">
-                    <vr-columns width="fullrow">
+                    <vr-columns width="fullrow" ng-show="scopeModel.selectedSellingNumberPlan != undefined" vr-loader="scopeModel.isPricingTemplateRuleGridLoading"> 
                         <vr-whs-sales-pricingtemplaterule-management on-ready="scopeModel.onPricingTemplateRuleManagementDirectiveReady" normal-col-num="4"></vr-whs-sales-pricingtemplaterule-management>
                     </vr-columns>
                 </vr-tab>
-            </vr-tabs>
+            </vr-tabs> 
         </vr-form>
     </vr-modalbody>
     <div>
