Update Payment Convertor add InvoiceTypeId
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43662

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Payment/Templates/PaymentConvertorEditor.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Payment/Templates/PaymentConvertorEditor.html
@@ -6,6 +6,9 @@
                                                       isrequired="true">
     </vr-genericdata-businessentitydefinition-selector>
 </vr-columns>
+
+<vr-invoicetype-selector on-ready="scopeModel.onInvoiceTypeSelectorReady" normal-col-num="6" isrequired="true"></vr-invoicetype-selector>
+
 <vr-columns width="1/2row">
     <vr-textbox value="scopeModel.sourceIdColumn" label="Source Id Column" isrequired="true"></vr-textbox>
 </vr-columns>
