--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Directives/VariationReport/Templates/VariationReportGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Directives/VariationReport/Templates/VariationReportGridTemplate.html
@@ -4,7 +4,9 @@
              defaultsortbyfieldname="'OrderValue'"
              defaultsortdirection="'DESC'"
              pagingtype="'Pager'"
-             showexpand="scopeModel.showExpandIcon" enableautoexport="true">
+             showexpand="scopeModel.showExpandIcon"
+             enableautoexport="true"
+             getrowstyle="scopeModel.getRowStyle">
     <vr-datagridcolumn headertext="scopeModel.dimensionTitle" field="'DimensionName'" type="'Text'" widthfactor="30"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Periods AVG'" field="'Average'" summaryfield="'Average'" type="'Number'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Periods %'" field="'Percentage'" summaryfield="'Percentage'" type="'Number'"></vr-datagridcolumn>
