--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -3575,6 +3575,7 @@ vr-toolbox[large] .item{
     border-radius: 4px;
     border: 1px solid rgb(204, 204, 204);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    z-index: 3;
 }
 .legend-container{
     position:relative
