--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Invoice/Templates/InvoiceGenerationDraftGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Invoice/Templates/InvoiceGenerationDraftGridTemplate.html
@@ -1,11 +1,12 @@
-﻿<vr-validator validate="isValid()">
-    <span vr-loader="isLodingGrid">
+﻿<span vr-loader="isLodingGrid">
+    <vr-validator validate="isValid()">
+
         <vr-datagrid datasource="invoicePartners"
                      on-ready="onGridReady"
                      dataretrievalfunction="dataRetrievalFunction"
                      pagingtype="'Pager'"
-                     idfield="PartnerId">
-            <vr-datagridcolumn headertext="'ID'" type="'Text'" field="'PartnerId'"></vr-datagridcolumn>
+                     idfield="InvoiceGenerationDraftId">
+            <vr-datagridcolumn headertext="'ID'" type="'Text'" field="'InvoiceGenerationDraftId'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'PartnerName'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'From'" type="'Date'">
                 <vr-datetimepicker value="dataItem.From" type="date" isrequired="true"></vr-datetimepicker>
@@ -20,5 +21,6 @@
                 </span>
             </vr-datagridcolumn>
         </vr-datagrid>
-    </span>
-</vr-validator>
+
+    </vr-validator>
+</span>
