--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPValidationMessage/Templates/BPValidationMessageHistoryGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPValidationMessage/Templates/BPValidationMessageHistoryGridTemplate.html
@@ -1,16 +1,21 @@
 ﻿<div ng-hide="filterSectionCollapsed">
     <vr-row removeline>
         <vr-columns width="large">
-            <vr-select label="Severity" ismultipleselection hideselectedvaluessection="true" datatextfield="description" datavaluefield="value"
-                       datasource="::actionSeverity" selectedvalues="selectedActionSeverity"></vr-select>
+            <vr-select label="Severity"
+                       datasource="::actionSeverities"
+                       datatextfield="description"
+                       datavaluefield="value"
+                       selectedvalues="selectedActionSeverities"
+                       ismultipleselection
+                       hideselectedvaluessection>
+            </vr-select>
         </vr-columns>
     </vr-row>
 </div>
-
 <vr-row removeline>
     <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
         <div transclude-to="buttons">
-            <vr-button type="Search" data-onclick="searchClicked"></vr-button>
+            <vr-button type="Search" data-onclick="search"></vr-button>
         </div>
     </vr-actionbar>
 </vr-row>
